<resources>
	<string name="app_name">TiQR</string>
	<!-- Strings related to login -->
	<string name="prompt_login">Username</string>
	<string name="prompt_password">Password</string>
	<string name="action_sign_in">Sign in</string>
	<string name="action_sign_in_short">Sign in</string>
	<string name="error_invalid_login">Invalid login</string>
	<string name="error_invalid_password">This password is too short</string>
	<string name="error_incorrect_password">This password or username is incorrect</string>

	<string name="action_server">Enter server address</string>
	<string name="action_server_port">Enter server port (leave blank for default)</string>
	<string name="error_invalid_server">Server address invalid</string>
	<string name="error_unreachable_server">Server unreachable or wrong port specified</string>
	<string name="error_invalid_server_port">Server port invalid</string>
	<string name="action_server_confirm">Confirm</string>

	<string name="error_field_required">This field is required</string>
	<string name="permission_rationale">"The following permissions are required for the app to function correctly."</string>

	<string name="title_activity_scanner">Scanner</string>
	<string name="navigation_drawer_open">Open navigation drawer</string>
	<string name="navigation_drawer_close">Close navigation drawer</string>
	<string name="nav_user">Username</string>
	<string name="nav_server">Server address</string>
	<string name="nav_header_desc">Navigation header</string>
	<string name="nav_change_server">Change server address</string>
	<string name="nav_change_login">Change login credentials</string>
	<string name="nav_recheck_permissions">Re-check permissions</string>
	<string name="nav_scan_history">Show scan history</string>

	<string name="action_settings">Settings</string>
	<string name="scanner_non_functional">The scanner is not functional, make sure to allow camera and storage permissions.</string>
	<string name="title_activity_login">User login</string>
	<string name="protocol_mode_switch">Connection type</string>
	<string name="protocol_mode_http">HTTP</string>
	<string name="protocol_mode_https">HTTPS</string>
	<string name="action_autologin_checkbox">Enable autologin</string>
	<string name="action_autoconnect_checkbox">Enable autoconnect</string>
	<string name="action_login_to_server">Change server address</string>
	<string name="offline_mode">Offline mode</string>
	<string name="offline_scanner">Code scanner only</string>

	<string name="title_activity_history">Scan history</string>
	<string name="action_history_to_scanner">Back to scanner</string>
</resources>
