<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

	<group android:checkableBehavior="single">
		<item
				android:id="@+id/nav_change_login"
				android:icon="@android:drawable/ic_menu_edit"
				android:title="@string/nav_change_login"/>
		<item
				android:id="@+id/nav_change_server"
				android:title="@string/nav_change_server"
				android:icon="@android:drawable/ic_menu_edit"
				/>
		<item
				android:id="@+id/nav_request_permissions"
				android:icon="@android:drawable/ic_popup_sync"
				android:title="@string/nav_recheck_permissions"/>
		<item
				android:id="@+id/nav_scan_history"
				android:icon="@android:drawable/ic_menu_recent_history"
				android:title="@string/nav_scan_history"/>
	</group>

</menu>
