<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		xmlns:tools="http://schemas.android.com/tools"
		android:layout_width="match_parent"
		android:layout_height="@dimen/nav_header_height"
		android:background="@drawable/side_nav_bar"
		android:paddingBottom="@dimen/activity_vertical_margin"
		android:paddingLeft="@dimen/activity_horizontal_margin"
		android:paddingRight="@dimen/activity_horizontal_margin"
		android:paddingTop="@dimen/activity_vertical_margin"
		android:theme="@style/ThemeOverlay.AppCompat.Dark"
		android:orientation="vertical"
		android:gravity="bottom">

	<ImageView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingTop="@dimen/nav_header_vertical_spacing"
			app:srcCompat="@mipmap/ic_launcher_round"
			android:contentDescription="@string/nav_header_desc"
			android:id="@+id/imageView"/>

	<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:paddingTop="@dimen/nav_header_vertical_spacing"
			android:textAppearance="@style/TextAppearance.AppCompat.Medium"
			android:id="@+id/nav_user_login"
			android:text="@string/nav_user"/>

	<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/nav_server_address"
			android:textAppearance="@style/TextAppearance.AppCompat.Small"
			android:text="@string/nav_server"/>

</LinearLayout>
