<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              tools:context=".Server"
              android:orientation="vertical"
              android:gravity="center_horizontal|fill_vertical">

	<!-- Login progress -->
	<ProgressBar
			android:id="@+id/server_check_progress"
			style="@android:style/Widget.DeviceDefault.Light.ProgressBar"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="8dp"
			android:visibility="gone"/>

	<ScrollView
			android:id="@+id/server_form"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:visibility="visible">

		<LinearLayout
				android:id="@+id/server_form_layout"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:gravity="center">

			<android.support.design.widget.TextInputLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content">

				<AutoCompleteTextView
						android:id="@+id/server_id"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:hint="@string/action_server"
						android:inputType="textNoSuggestions"
						android:maxLines="1"
						android:singleLine="true"
						/>

			</android.support.design.widget.TextInputLayout>

			<android.support.design.widget.TextInputLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content">

				<AutoCompleteTextView
						android:id="@+id/server_port_id"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:hint="@string/action_server_port"
						android:inputType="textNoSuggestions"
						android:maxLines="1"
						android:singleLine="true"
						android:layout_weight="1"/>
			</android.support.design.widget.TextInputLayout>

			<CheckBox
					android:text="@string/action_autoconnect_checkbox"
					android:layout_width="match_parent"
					android:layout_height="0dp"
					android:id="@+id/autoconnect_checkbox"
					android:layout_weight="1"
					android:gravity="start|center_vertical"
					android:checked="true"
					/>

			<Switch
					android:text="@string/protocol_mode_https"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:id="@+id/protocol_mode_switch"
					android:checked="true"
					android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button.Colored"
					android:textColor="@color/colorPrimary"
					android:gravity="center_vertical|end"/>

			<Button
					android:id="@+id/sever_confirm_button"
					style="@style/Widget.AppCompat.Button.Colored"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="16dp"
					android:text="@string/action_server_confirm"/>

		</LinearLayout>
	</ScrollView>
</LinearLayout>